err/mysql-replay.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/MySQLdb'...
Listing './lib/python3.5/site-packages/MySQLdb/constants'...
Listing './lib/python3.5/site-packages/mysql_replay'...
Compiling './lib/python3.5/site-packages/mysql_replay/execute.py'...
***   File "./lib/python3.5/site-packages/mysql_replay/execute.py", line 88
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/mysql_replay/mysql'...
Listing './lib/python3.5/site-packages/mysql_replay/mysql/utilities'...
Listing './lib/python3.5/site-packages/mysql_replay/mysql/utilities/common'...
Compiling './lib/python3.5/site-packages/mysql_replay/prepare.py'...
***   File "./lib/python3.5/site-packages/mysql_replay/prepare.py", line 29
    os.mkdir(output_dir, 0755)
                            ^
SyntaxError: invalid token

Listing './lib/python3.5/site-packages/mysql_replay-0.1.24.egg-info'...
Listing './lib/python3.5/site-packages/mysqlclient-1.3.12.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
